--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exhale",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@studio-freight/lenis": "^1.0.42",
+    "framer-motion": "^11.3.17",
+    "motion": "^10.18.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^6.25.1",
+    "react-router-dom": "^6.25.1",
+    "react-router-hash-link": "^2.4.3",
+    "react-social-icons": "^6.17.0",
+    "react-spring": "^9.7.4",
+    "redux": "^5.0.1",
+    "sass": "^1.77.8",
+    "swiper": "^11.1.8"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -24,7 +43,8 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.6",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4",
     "vite": "^5.3.4"
   }
 }
